--- a/index.html
+++ b/index.html
@@ -8,8 +8,39 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    Reliable, efficient delivery Powered by Technology Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful Supervisor Monitors activity to identify project roadblocks Team
-    Builder Scans our talent network to create the optimal team for your project Karma Regularly evaluates our talent to ensure quality Calculator Uses data from past projects to provide better delivery estimates
+    <main class="container">
+      <header>
+        <h1>
+          Reliable, efficient delivery
+          <div>Powered by Technology</div>
+        </h1>
+        <p>Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
+      </header>
+      <section>
+        <div class="box supervisor">
+          <h2>Supervisor</h2>
+          <p>Monitors activity to identify project roadblocks</p>
+          <img src="images/icon-supervisor.svg" alt="Supervisor" />
+        </div>
+        <div class="group">
+          <div class="box team-builder">
+            <h2>Team Builder</h2>
+            <p>Scans our talent network to create the optimal team for your project</p>
+            <img src="images/icon-team-builder.svg" alt="Team Builder" />
+          </div>
+          <div class="box karma">
+            <h2>Karma</h2>
+            <p>Regularly evaluates our talent to ensure quality</p>
+            <img src="images/icon-karma.svg" alt="Karma" />
+          </div>
+        </div>
+        <div class="box calculator">
+          <h2>Calculator</h2>
+          <p>Uses data from past projects to provide better delivery estimates</p>
+          <img src="images/icon-calculator.svg" alt="Calculator" />
+        </div>
+      </section>
+    </main>
 
     <!-- <footer>
     <p class="attribution">
